Clean up config serialization